--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "private": true,
   "scripts": {
+    "front": "cross-env NODE_ENV=\"local_front\" nuxt",
     "dev": "cross-env NODE_ENV=\"local\" nuxt",
     "build": "cross-env NODE_ENV=\"production\" nuxt build",
     "start": "nuxt start",
@@ -15,12 +16,12 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "cross-env": "^7.0.3",
     "nuxt": "^2.15.8",
+    "nuxt-property-decorator": "^2.9.1",
     "vue": "^2.6.14",
-    "vue-class-component": "^7.2.6",
-    "vue-property-decorator": "^9.1.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
