--- a/.github/workflows/update_articles.yml
+++ b/.github/workflows/update_articles.yml
@@ -34,5 +34,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          push_dir: ./dist
+          publish_dir: ./dist
           publish_branch: gh-pages
