--- a/.github/workflows/daily_batch.yml
+++ b/.github/workflows/daily_batch.yml
@@ -36,7 +36,7 @@ jobs:
     needs: lintfix # deployジョブの実行条件
 
     runs-on: ubuntu-latest
-    name: Checkout, build, deploy
+    name: Deploy GithubPages
     steps:
       - uses: actions/checkout@v3
       - name: Restore packages
