--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "cross-env": "^7.0.3",
-    "nuxt": "^2.15.8",
+    "nuxt-edge": "^2.16.0-27720022.54e852f",
     "nuxt-property-decorator": "^2.9.1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
